cmake_minimum_required(VERSION 3.26)
project(sorting_algorithms)

set(CMAKE_CXX_STANDARD 14)

add_executable(sorting_algorithms
        print_array.c
        README.md
        print_list.c
        0-main.c
        0-bubble_sort.c
        1-main.c
        1-main.c
        1-insertion_sort_list.c
        2-main.c
        2-selection_sort.c
        3-main.c
        3-quick_sort.c)
